# Plazza

./: .gitignore  CMakeLists.txt
.github/workflows/: check-binary.yml  plazza-ci.yml
src/: Data.cpp  Data.hpp  Main.cpp  Plazza.cpp  Plazza.hpp
src/Errors/: AError.cpp  AError.hpp  CookError.hpp  IError.hpp  KitchenError.hpp  NetworkError.hpp  OrderError.hpp  ParsingError.hpp  PlazzaError.hpp
src/Kitchens/: Base.cpp  Ingredient.cpp  Ingredient.hpp  Kitchen.hpp  Pizza.cpp  Pizza.hpp
src/Kitchens/Cooks/: Cooking.cpp  Cooks.cpp  Cooks.hpp
src/Network/: ANetwork.cpp  ANetwork.hpp  INetwork.hpp
src/Network/Client/: Base.cpp  Client.hpp  Communication.cpp
src/Network/Server/: Base.cpp  Communication.cpp  Server.hpp
src/Networks/: ANetwork.cpp  ANetwork.hpp  INetwork.hpp
src/Networks/Client/: Client.hpp  Communication.cpp
src/Networks/Server/: Base.cpp  Communication.cpp  Server.hpp
src/Renderer/: IRenderer.hpp  SFMLRenderer.cpp  SFMLRenderer.hpp  ShellRenderer.cpp  ShellRenderer.hpp
src/Utils/: StringUtils.hpp
